--- a/.github/workflows/iac-fabric-dataplatform.yml
+++ b/.github/workflows/iac-fabric-dataplatform.yml
@@ -28,3 +28,8 @@ jobs:
         template: iac/bicep/main.bicep
         # parameters: 'k1=v1 k2=v2 k3=v3'
         failOnStdErr: false
+
+"rules": {
+    "no-unused-vars": "warn", 
+    "@typescript/no-unused-vars": "warn"  // also add this if you're using typescript
+},
