--- a/.github/workflows/iac-fabric-dataplatform.yml
+++ b/.github/workflows/iac-fabric-dataplatform.yml
@@ -23,7 +23,7 @@ jobs:
       uses: azure/arm-deploy@v1
       with:
         scope: subscription
-        region: australiaeast
+        region: centralindia
         subscriptionId: 224a3c65-8eb9-4654-8ba7-ea005536e634
         template: iac/bicep/main.bicep
         # parameters: 'k1=v1 k2=v2 k3=v3'
